OpenVDB crash #47250

Closed
opened 2016-01-27 08:57:43 +01:00 by Jeffrey · 8 comments

System Information
Centos 7 x64
Kernel 3.10.0-327.4.5
GTX 970 + 560 Ti
Nvidia driver 358.16 (from nvidia)
Blender b336124 (from source)
OpenVDB 3.1.0 (from source)
Blosc 1.6.1-1 (from yum)
TBB 4.1-9.20130314 (from yum)
Boost 1.53.0-25 (from yum. blender boost 1.60.0 fails blender compile)

I am unsure if my dependencies are sufficient because no minimum was specified.

Short description of error
Baking OpenVDB cache crashes blender.

Exact steps for others to reproduce the error
Open supplied blend with the UI and bake the simulation. It should crash.

This is a GDB backtrace on this file: http://www.pasteall.org/63933

smoke.blend

**System Information** Centos 7 x64 Kernel 3.10.0-327.4.5 GTX 970 + 560 Ti Nvidia driver 358.16 (from nvidia) Blender b336124 (from source) OpenVDB 3.1.0 (from source) Blosc 1.6.1-1 (from yum) TBB 4.1-9.20130314 (from yum) Boost 1.53.0-25 (from yum. blender boost 1.60.0 fails blender compile) I am unsure if my dependencies are sufficient because no minimum was specified. **Short description of error** Baking OpenVDB cache crashes blender. **Exact steps for others to reproduce the error** Open supplied blend with the UI and bake the simulation. It should crash. This is a GDB backtrace on this file: http://www.pasteall.org/63933 [smoke.blend](https://archive.blender.org/developer/F277469/smoke.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @italic

Added subscriber: @italic

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Kévin Dietrich self-assigned this 2016-01-27 09:26:55 +01:00

Hmm, for some odd reason the smoke simulator may store a zero matrix.

Hmm, for some odd reason the smoke simulator may store a zero matrix.

This issue was referenced by cbb52c903c

This issue was referenced by cbb52c903cd0e6915c4494913f15c1e8061a109a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Crashed should be fixed now, you can pull the source again to see if it works for you.

Crashed should be fixed now, you can pull the source again to see if it works for you.
Author

Seems to work for me now. Thanks!

Seems to work for me now. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47250
No description provided.